z-index fix

--- a/src/app/next-stores/HomePage.module.css
+++ b/src/app/next-stores/HomePage.module.css
@@ -2,7 +2,7 @@
   position: sticky;
   inset-block-start: 0;
   isolation: isolate;
-  z-index: 1;
+  z-index: 2;
   background-color: hsl(0, 0%, 13%, 0.9);
   backdrop-filter: blur(2px);
 }
